# QtSocket

./: .gitignore
Client/client/: CMakeLists.txt  client.cpp  client.h  input.txt  main.cpp
Server/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
Server/shared_lib/shared_lib/: CMakeLists.txt  shared_lib_global.h  sharedlib.cpp  sharedlib.h
